--- a/public/style.css
+++ b/public/style.css
@@ -15,13 +15,11 @@
       margin:0;
       padding:0;
       box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
       font-family: 'Roboto', Montserrat, sans-serif;
-      /* background-color: rgb(62, 62, 77);
-      background: url('images/background-texture.jpg');
+      background-color: rgb(62, 62, 77);
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: center; */
+      background-position: center;
       color: white;
       position: relative;
       scroll-behavior: smooth;
@@ -44,7 +42,6 @@
   .custom-btn:hover {
     color: bisque;
     background: radial-gradient(rgb(82, 82, 133), #012035, rgb(57, 57, 68));
-    /* clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%); */
   }
   
   #info {
@@ -55,9 +52,9 @@
       width: 100vw;
   }
   
-  #navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links {
+  #navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links { 
     padding: 1em;
-  }
+  } 
 
   #mainLayout {
     margin: 0 auto;
@@ -82,7 +79,7 @@
 
   .card-body {
     margin:0;
-    padding:0;
+    padding: 0;
     width: 100%;
     max-width: 100vw;
     height: max-content;
