--- a/public/animations.css
+++ b/public/animations.css
@@ -113,40 +113,6 @@
   }
   
 
-/* .text-shadow-pop-bottom {
-	-webkit-animation: text-shadow-pop-bottom 2.6s both;
-	        animation: text-shadow-pop-bottom 2.6s both;
-} */
-
-/**
- * ----------------------------------------
- * animation text-shadow-pop-bottom
- * ----------------------------------------
- */
- /* @-webkit-keyframes text-shadow-pop-bottom {
-        0% {
-                text-shadow: 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555;
-                -webkit-transform: translateY(0);
-                        transform: translateY(0);
-        }
-        100% {
-                text-shadow: 0 1px #555555, 0 2px #555555, 0 3px #555555, 0 4px #555555, 0 5px #555555, 0 6px #555555, 0 7px #555555, 0 8px #555555;
-                -webkit-transform: translateY(-8px);
-                        transform: translateY(-8px);
-        }
-}
-@keyframes text-shadow-pop-bottom {
-        0% {
-                text-shadow: 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555, 0 0 #555555;
-                -webkit-transform: translateY(0);
-                        transform: translateY(0);
-        }
-        100% {
-                text-shadow: 0 1px #555555, 0 2px #555555, 0 3px #555555, 0 4px #555555, 0 5px #555555, 0 6px #555555, 0 7px #555555, 0 8px #555555;
-                 -webkit-transform: translateY(-8px);
-                        transform: translateY(-8px);
-        }
-} */
       
 .text-focus-in {
 	-webkit-animation: text-focus-in 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -219,9 +185,9 @@
 }
 
 .slide-in-bottom {
-	-webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}      
+	-webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) ;
+	        animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) ;
+}
 
 /**
  * ----------------------------------------
@@ -230,28 +196,29 @@
  */
  @-webkit-keyframes slide-in-bottom {
         0% {
-                -webkit-transform: translateY(1000px);
-                        transform: translateY(1000px);
-                opacity: 0;
+          -webkit-transform: translateY(1000px);
+                  transform: translateY(1000px);
+          opacity: 0;
         }
         100% {
-                -webkit-transform: translateY(0);
-                        transform: translateY(0);
-                opacity: 1;
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
+          opacity: 1;
         }
-}
-@keyframes slide-in-bottom {
+      }
+      @keyframes slide-in-bottom {
         0% {
-                -webkit-transform: translateY(1000px);
-                        transform: translateY(1000px);
-                opacity: 0;
+          -webkit-transform: translateY(1000px);
+                  transform: translateY(1000px);
+          opacity: 0;
         }
         100% {
-                -webkit-transform: translateY(0);
-                        transform: translateY(0);
-                opacity: 1;
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
+          opacity: 1;
         }
-}
+      }
+      
 
 .flip-in-hor-bottom {
 	-webkit-animation: flip-in-hor-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
