--- a/assets/style.css
+++ b/assets/style.css
@@ -16,8 +16,7 @@
       padding:0;
       min-height: 100vh;
       box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-      font-family: 'Roboto', Montserrat, sans-serif;
+      font-family: Calibri, Montserrat, sans-serif;
       background-color: rgb(62, 62, 77);
       background: url('background-texture.jpg');
       background-repeat: no-repeat;
